# minimx

./: .gitignore  CMakeLists.txt
example/: parsemx.cpp
include/: minimx.h
test/: parser_tests.cpp
